# nuc_playwright_test

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  calculate_max_stress.py  config.py  main.py  main_modular.py  manifest.json  pyproject.toml  run_max_contexts.py  shared_state.py  tampermonkey_scripts.js  temp_working.py
browser/: __init__.py  browser_utils.py  page_monitoring.py
course/: __init__.py  course_handler.py
reporting/: __init__.py  categorized_csv_reporter.py  csv_reporter.py
session/: __init__.py
tracking/: README.md  __init__.py  code_additions_example.py  integration_helper.py  session_tracker.py
utils/: __init__.py  config_optimizer.py  helpers.py  logging_utils.py  resource_calculator.py  resource_integration_example.py  structured_logger.py  structured_logging_examples.py
