[project]
name = "nuc-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "aiofiles>=23.2.1",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.40.2",
    "bs4>=0.0.2",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "pdfplumber==0.11.0",
    "pillow>=10.0.0",
    "playwright>=1.54.0",
    "pydantic-ai[logfire]>=0.6.0",
    "pymupdf>=1.23.0",
    "pypandoc>=1.15",
    "pypdf2==3.0.1",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "weasyprint>=66.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.4",
    "psutil>=5.9.0",
    "fastapi>=0.115.0",
]
